--- a/css/main.css
+++ b/css/main.css
@@ -4,8 +4,13 @@ a{text-decoration: none;color: #333;}
 .clearfix::after{content: '';display: block;clear: both;}
 .float--left{float: left;}
 .float--right{float: right;}
+.summary__title{font-size: 38px;font-weight: 300; line-height: 1.25;margin-bottom: 18px;}
+.summary__description{font-size: 25px;font-weight: 300;color: #767676; line-height: 1.5;}
+/* inner */
+.section{position: relative;}
+.section .inner{max-width: 980px;margin: 0 auto;box-sizing: border-box;position: relative;}
 /* btn */
-.btn{display: inline-flex;position: relative; height: 34px; align-items: center; padding: 0 12px; font-size: 14px;font-weight: 500; line-height: 1.5;cursor: pointer;  box-sizing: border-box;
+.btn{display: flex;position: relative; height: 34px; align-items: center; padding: 0 12px; font-size: 14px;font-weight: 500; line-height: 1.5;cursor: pointer;  box-sizing: border-box;
     background:#eee linear-gradient(to bottom, #fcfcfc, #eee);border: 1px solid #d5d5d5; border-radius: 4px;
 }
 .btn:hover::before{
@@ -22,7 +27,7 @@ a{text-decoration: none;color: #333;}
 
 /* header */
 header{border-bottom: 1px solid rgba(0,0,0,0.75);box-shadow: 0 0 5px rgba(0,0,0,0.75);background: #fff;}
-header .inner{max-width: 980px; height: 78px; margin: 0 auto;}
+header .inner{ height: 78px;}
 header .menu-group{ display: flex;align-items: center;height: 100%; }
 header .logo{margin-right: 10px;}
 header .logo a{display: block; width: 32px;height: 32px;text-indent: -9999px; background: url('../img/logo.svg');}
@@ -41,3 +46,57 @@ header .btn-group .sign-in{margin-right: 4px;}
 header .sub-menu{display: flex;margin-right: 10px;}
 header .sub-menu li a{display: block; padding: 8px;font-size: 13px;color: #3c4146;}
 header .sub-menu li a:hover{color: #4078c0;}
+#toggle-btn{display: none;background:url('../img/toggle-btn.svg');width: 18px;height: 24px;position: absolute;top: 16px;right: 20px;cursor: pointer;text-indent: -9999px;}
+
+/* visual */
+.section--visual{background-image: url('../img/bg.jpg'); background-repeat: no-repeat; background-position: bottom left;background-size: cover;}
+.section--visual::before{content: ''; position: absolute;top: 0;left: 0;right: 0;bottom: 0; background-color: rgba(0,0,0,0.3);}
+.section--visual .inner{ padding: 160px 0; display: flex;}
+.section--visual .sumamry{flex-basis: 0;flex-grow: 1;margin-right: 90px;}
+.section--visual .summary__title{color: #fff;font-size: 54px; text-shadow: 0 1px 1px rgba(0,0,0,0.25), 0 1px 25px rgba(0,0,0,0.75);}
+.section--visual .summary__description{color: #fff; text-shadow: 0 1px 1px rgba(0,0,0,0.25), 0 1px 25px rgba(0,0,0,0.75);}
+
+#sign-form{width: 340px;margin-top: 16px;}
+#sign-form li{margin-bottom: 17px;}
+#sign-form li:last-child{margin-bottom: 0;}
+#sign-form .input--text{width: 100%;height: 40px;}
+#sign-form .caption{font-size: 12px;margin-top: 5px;color: rgba(255,255,255,0.6);line-height: 1.5;text-align: center;}
+#sign-form [type="submit"]{width: 100%;height: 62px;padding: 0 25px;font-size: 20px;justify-content: center;}
+
+/* feature */
+.section--feature{background-color: #f5f5f5; padding-top: 66px;}
+.section--feature .sumamry{ max-width: 820px; margin: 0 auto; text-align: center;}
+.section--feature .video{max-width: 650px;margin: 50px auto;}
+.section--feature .video-ratio{position: relative;padding-top: 56.25%;}
+.section--feature .video-ratio iframe{position: absolute;top: 0;left: 0;right: 0; width: 100%;height: 100%;}
+
+.section--feature .tiles{border: 1px solid #e5e5e5; border-width: 1px 0 1px 0;}
+.section--feature .tiles .inner{max-width: 1200px;}
+/* .section--feature .tiles ul{display: grid;grid-template-columns: repeat(4, 1fr);}
+.section--feature .tiles li{padding: 34px 24px;text-align: center;line-height: 1.5;border-right: 1px solid #e5e5e5;box-sizing: border-box;} */
+.section--feature .tiles li{float: left;width: 25%;padding: 34px 24px;text-align: center;line-height: 1.5;border-right: 1px solid #e5e5e5;box-sizing: border-box;}
+.section--feature .tiles li:last-child{border-right: 0;}
+
+.section--feature .tiles li img{max-width: 100%;padding: 14px 10% 24px;box-sizing: border-box;}
+.section--feature .tiles li h3{font-size: 18px;font-weight: 500;margin-bottom: 10px;}
+.section--feature .tiles li p{font-size: 14px;color: #767676;}
+
+/* map */
+#map{width: 100%;height: 400px;margin-top: 40px;border: 1px solid rgba(0,0,0,0.2);border-bottom: 0;box-shadow: 0 0 20px rgba(0,0,0,0.2);box-sizing: border-box;}
+
+/* pricing */
+.section--pricing{background:linear-gradient(#f5f5f5, #fff)}
+.section--pricing .inner{padding: 80px 0;}
+.section--pricing .card{display: flex;border: 1px solid #e5e5e5;border-radius: 6px; box-sizing: border-box;}
+.section--pricing .card .cell{padding: 24px;display: flex;justify-content: center;align-items: center;}
+.section--pricing .card .cell1 .btn{height: 50px;font-size: 16px;}
+.section--pricing .card .cell2{font-size: 22px;font-weight: 500;line-height: 1.5;flex: 1;border-left: 1px solid #e5e5e5;}
+
+/* footer */
+footer .inner{padding: 50px 0; border-top: 1px solid #eee;}
+footer .site-links{display: flex;}
+footer .site-links li{font-size: 12px;margin-right: 10px;color: #767676;}
+footer .site-links li a{color: #4078c0}
+footer .site-links li a:hover{text-decoration: underline;}
+footer .logo svg{position: absolute;top: 0;bottom: 0;left: 0;right: 0;margin: auto;width: 24px;height: 24px;}
+footer .logo:hover svg{fill: #4078c0;}
